--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 	height: 100vh;
 	font-family: Arial, Helvetica, sans-serif;
 	line-height: 1.6;
-	background-color: rgb(192, 255, 213);
+	background-color: whitesmoke;
 }
 
 .container {
@@ -197,4 +197,15 @@ body {
 	#navbar .navbar-link:last-child {
 		margin-right: 0;
 	}
+}
+
+/* Estilo para ocultar elementos */
+.hidden {
+	display: none;
+}
+
+hr.rounded {
+	border-top: 8px solid #bbb;
+	border-radius: 5px;
+	border-color: green;
 }
